--- a/DD/Sections/1-Introduction/Document_structure.tex
+++ b/DD/Sections/1-Introduction/Document_structure.tex
@@ -1,8 +1,7 @@
-% TODO: check if this list is still right
 \begin{enumerate}
   \item In the first part a general introduction of the Design Document is given. The purpose part exposes the substantial differences with the RASD document;
   \item The second section it's the core of the DD: it firstly provides an high level overview of the system followed by  a description of various aspects of the architecture from different points of view such as: component, deployment and runtime view. It is also present a general explanation of the architectural patterns and styles adopted in the development process. Most of the parts of this section are enriched with UML diagrams to ensure a better understanding of the concepts;
-  \item This part specifies the user interface design of the mobile application and the web interface. Since the mockups of both applications were already provided in the RASD document, here some UX diagrams are proposed to better describe the navigation and functioning of the applications;
+  \item This part specifies the user interface design of the mobile application and the web interface. Since the mockups of both applications were already provided in the RASD document, here some diagrams are proposed to better describe the navigation and functioning of the applications;
   \item Part four exposes the requirements traceability matrix which maps the requirements stated in the RASD document with the corresponding design component;
   \item Chapter five provides the proposals for the implementation, integration and testing plans. This plans are created by taking into account, for each functionality, the importance for the customer and the difficulty of implementation/testing;
   \item The last part states the hours of work division and the tools used to create  all the part of this DD document.
