--- a/DD/Sections/2-Architectural_Design/Component_view.tex
+++ b/DD/Sections/2-Architectural_Design/Component_view.tex
@@ -1,6 +1,6 @@
 The figure \ref{fig:component_diagram} represents the SafeStreets component diagram. Each of the components are wrapped inside a specific box that indicates the subsystem in which they belong to.
-\newline Subsystems are groups of components which perform similar operations: this boxing technique is a multilayer logical division that can be useful in order to categorize the components and the whole system at different layers of abstraction.
-\newline For the sake of simplicity, the component diagram pictures the application layer (backend) of the system and not the mobile and web app structures. The business logic and core functions are fully contained in the application layer and therefore only that relevant part of the Safestreets system has been characterized.
+Subsystems are groups of components which perform similar operations: this boxing technique is a multilayer logical division that can be useful in order to categorize the components and the whole system at different layers of abstraction.
+\newline For the sake of simplicity, the component diagram pictures the application layer (backend) of the system and not the mobile and web app structures. The business logic and core functions are fully contained in the application layer and therefore only that relevant part of the SafeStreets system has been characterized.
 \begin{figure}[H]
     \centering
     \includegraphics[width=1.1\textwidth]{UML_diagrams/component_uml_safestreets}
@@ -10,7 +10,7 @@ The figure \ref{fig:component_diagram} represents the SafeStreets component diag
 From the figure \ref{fig:component_diagram} it is possible to identify several subsystems of the application backend system. Here it is a detailed list of the subsystems:
 \begin{itemize}
     \item \textbf{API Gateway}: this subsystem is responsible for handling all the request coming from the frontend applications (web and mobile) and routing them into the appropriate components;
-    \item \textbf{ReportService}: this subsystem is responsible for handling all the operations related to the violation reports. It interacts directly with the image recognition service in order to retrieve the license plate transctiptions;
+    \item \textbf{ReportService}: this subsystem is responsible for handling all the operations related to the violation reports. It interacts directly with the image recognition service in order to retrieve the license plate transcriptions;
     \item \textbf{PersonnelService}: this subsystem is responsible for handling all the operations related to the personnel management, such as registering new technicians and scheduling them to reports. This subsystem is accessible only by LSA accounts;
     \item \textbf{AuthenticationService}: this subsystem is responsible for handling the login and registration operations;
     \item \textbf{SuggestedInterventionService}: this subsystem is responsible for handling the operation related to the request of suggested interventions. It interacts directly with the municipality system in order to retrieve car accident information;
@@ -19,12 +19,12 @@ From the figure \ref{fig:component_diagram} it is possible to identify several s
 \end{itemize} 
 Here it is a detailed explanation for each of the components shown in the component diagram:
 \begin{itemize}%TODO accounts category verification
-    \item \textbf{AuthorityWebApp}: this component represents the web application that LSAs and technicians are supposed to use in order to perform any operation with the Safestreets system. In particular, the web app is the end-user application, therefore it is only a frontend interface;
+    \item \textbf{AuthorityWebApp}: this component represents the web application that LSAs and technicians are supposed to use in order to perform any operation with the SafeStreets system. In particular, the web app is the end-user application, therefore it is only a frontend interface;
     \item \textbf{AuthorityWebServer}: this component represents the web server that hosts the web application used by LSAs and technicians. The web server receives all the HTTP requests from the AuthorityWebApp and forwards them to the application backend system. Moreover, the web server notifies the web application when the responses of the previous requests are forwarded from the Notification Service;
     \item \textbf{UserMobileApp}: this component represents the mobile application which users interacts with. When users need to perform a specific function offered by the system, the mobile application automatically forwards it to the application backend system. Moreover, the application is always listening for push notifications coming from the Notification service, for example in case one of the previously reported violation is updated by the technicians;
     \item \textbf{URIManager}: this component is responsible for forwarding the requests coming from the frontend system to the backend subsystem which is able to handle the specific request. This routing is possible thanks to the target URI of the frontend request, that uniquely identify the associated component of the application backend system. Before forwarding the requests to the specific components, the URIManager checks the token that is sent by the frontend application in order to retrieve (and then forward) the account category that performed the request. If the token has expired or it does not exist, the request is automatically rejected and the frontend application is requested for a login operation;
-    \item \textbf{NewReportHandler}:this component handles the newly reported violation that are forwarded from the URIManager. The NewReportHandler is responsible for checking the correctness of the new reported data and to delegate the plate recognition to the PlateRecognitionService which is external with respect to the Safestreets system. Once the report has been verified and the plate transctiption has been gathered, the report is forwarded to the QueryManager;
-    \item \textbf{PlateRecognitionService}: this component is external from the Safestreets system. It has been created for graphical purposes and it is treated as a black box: given a plate image, it is able to transcribe the license plate and give it back to the NewReportHandler;
+    \item \textbf{NewReportHandler}:this component handles the newly reported violation that are forwarded from the URIManager. The NewReportHandler is responsible for checking the correctness of the new reported data and to delegate the plate recognition to the PlateRecognitionService which is external with respect to the SafeStreets system. Once the report has been verified and the plate transcription has been gathered, the report is forwarded to the QueryManager;
+    \item \textbf{PlateRecognitionService}: this component is external from the SafeStreets system. It has been created for graphical purposes and it is treated as a black box: given a plate image, it is able to transcribe the license plate and give it back to the NewReportHandler;
     \item \textbf{ViolationStatusManager}: this component is responsible for changing the status of the violation reports. This component can only be invoked only if the requesting account is a technician or an LSA;
     \item \textbf{FilteringManager}: this component is responsible for formulating mining operations. The URIManager forwards the mining information to the FilteringManager, which gathers and aggregate all the query parameter and forwards the formally complete query to the QueryManager;
     \item \textbf{SchedulingManager}: this component is responsible for performing the association between technicians and reports. This component can be invoked only if the requesting account is a LSA or a police technician. It handles both new scheduling requests (LSA) and schedule retrieving requests. After a series of checks, the verified requests is wired into a query and it is forwarded to the QueryManager;
@@ -40,22 +40,25 @@ Here it is a detailed explanation for each of the components shown in the compon
         \item Forward the suggested interventions to the SuggestionNotifier.
     \end{itemize}
     \item \textbf{MunicipalityDataHandler}: this component is responsible for taking the data requests coming from the SuggestionGenerationManager and formulate them into the municipality standard. Once this operation is performed, the request is forwarded to the MunicipalityDataSharing interface together with an authentication token provided by the municipality. If the token has expired, a new one is requested and the operation is repeated. When data is provided, it is backpropagated to the SuggestionGenerationManager;
-    \item \textbf{MunicipalityDataSharing}: this component is external from the Safestreets system. It has been created for graphical purposes and it is treated as a black box: when a formally correct request is received together with an authentication token, the MunicipalityDataSharing system forwards the requested information to the MunicipalityDataHandler;
+    \item \textbf{MunicipalityDataSharing}: this component is external from the SafeStreets system. It has been created for graphical purposes and it is treated as a black box: when a formally correct request is received together with an authentication token, the MunicipalityDataSharing system forwards the requested information to the MunicipalityDataHandler;
     \item \textbf{SuggestionNotifier}: this component is responsible for forwarding the suggested interventions set to the LSA account web app through the SendNotificationWebManager;
-    \item \textbf{QueryManager}: this component is responsible for interacting with the data layer of the Safestreets system. The QueryManager is able to connect directly with the Cloud DBMS and perform queries on the several databases of the Safestreets system. When this component receives query information, it acts as following: 
+    \item \textbf{QueryManager}: this component is responsible for interacting with the data layer of the SafeStreets system. The QueryManager is able to connect directly with the Cloud DBMS and perform queries on the several databases of the SafeStreets system. When this component receives query information, it acts as following: 
     \begin{itemize}
         \item Perform queries depending on their kinds, which is inferred from the parameters the component receives: 
         \begin{itemize}
             \item Insert: tries to insert the specified data into the database;
             \item Select: retrieve the filtered data;
-            \item Login: retrieve the specified data and checks wether the result contains at least one correspondency. If this check is approved, the QueryManager generates a token that is associated with the username and the category of the account. This token is then backpropagated to the LoginManager and embedded in the result of the query;
+            \item Update: change the status of the specified report (i.e. from Pending to Solved);
+            \item Login: retrieve the specified data and checks whether the result contains at least one correspondency. If this check is approved, the QueryManager generates a token that is associated with the username and the category of the account. This token is then backpropagated to the LoginManager and embedded in the result of the query;
         \end{itemize}
         \item Forwards the result of the query to the AggregationManager.
     \end{itemize}
-    \item \textbf{AuthenticationDB}: this component is external from the Safestreets system. It has been created for graphical purposes and it is treated as a black box: it contains all the information associated to the Safestreets accounts;
-    \item \textbf{PersonnelDB}: this component is external from the Safestreets system. It has been created for graphical purposes and it is treated as a black box: it contains all the information associated to personnel of the authorities: any kind of association between LSAs and technicians relation and the technicians schedules;
-    \item \textbf{ViolationDB}: this component is external from the Safestreets system. It has been created for graphical purposes and it is treated as a black box: it contains all the information associated to the violation reports;
+    \item \textbf{AuthenticationDB}: this component is external from the SafeStreets system. It has been created for graphical purposes and it is treated as a black box: it contains all the information associated to the SafeStreets accounts;
+    \item \textbf{PersonnelDB}: this component is external from the SafeStreets system. It has been created for graphical purposes and it is treated as a black box: it contains all the information associated to personnel of the authorities: any kind of association between LSAs and technicians relation and the technicians schedules;
+    \item \textbf{ViolationDB}: this component is external from the SafeStreets system. It has been created for graphical purposes and it is treated as a black box: it contains all the information associated to the violation reports;
     \item \textbf{AggregationManager}: this component is responsible for packing the retrieved data from the QueryManager into a standard format and forward it to the SendNotificationWebManager or SendNotificationMobileManager depending on the kind of account that performed that specific operation;
     \item \textbf{SendNotificationWebManager}: this component is responsible for forwarding the result of the requested operation to the web application of the account whom requested such operations;
     \item \textbf{SendNotificationMobileManager}: this component is responsible for forwarding the result of the requested operation to the mobile application of the account whom requested such operations;
 \end{itemize}
+
+\newpage
