--- a/DD/Sections/2-Architectural_Design/Other_design_decisions.tex
+++ b/DD/Sections/2-Architectural_Design/Other_design_decisions.tex
@@ -34,7 +34,7 @@ The design and development of typical systems utilize data management and relati
 \newline The main advantages of adopting a cloud DBMS are:
 \begin{itemize}
     \item Scalability: scaling along any dimension generally requires adding or subtracting nodes from a cluster to change the storage capacity, I/O operations per second, or total compute available to bring to bear upon queries. That operation, of course, requires redistributing copies of the data and sending it between nodes. Although this was once one of the hardest problems in building scalable, distributed databases, the new breed of cloud-native databases can take care of these issues efficiently;
-    \item Reduced Administrative Burden: a cloud-hosted, mostly self-managed database doesn’t eliminate a database administrator, but it can eliminate unnecessary features that typically consume much of a DBA’s time and efforts. That allows a DBA to focus his or her time on more important issues;
-    \item Improved Security: by running databases on in-house servers, it’s SafeStreets responsibility to think about security. It is necessary to ensure that databases have an updated kernel and other critical software, and it is necessary to keep up with the newest digital threats. By delegating all these operations to the cloud DBMS company, a lot of work is saved.
+    \item Reduced Administrative Burden: a cloud-hosted, mostly self-managed data\-base doesn’t eliminate a database administrator, but it can eliminate unnecessary features that typically consume much of a DBA’s time and efforts. That allows a DBA to focus his or her time on more important issues;
+    \item Improved Security: by running databases on in-house servers, it’s \\ SafeStreets responsibility to think about security. It is necessary to ensure that data\-bases have an updated kernel and other critical software, and it is necessary to keep up with the newest digital threats. By delegating all these operations to the cloud DBMS company, a lot of work is saved.
 \end{itemize}
 All of this advantages relieves an heavy burden from the budget of the project, as the expenses of a Cloud DBMS service is much lower than affording a local DBMS.
