--- a/DD/Sections/2-Architectural_Design/Selected_architectural_styles_and_patterns.tex
+++ b/DD/Sections/2-Architectural_Design/Selected_architectural_styles_and_patterns.tex
@@ -1,10 +1,9 @@
 \subsection{RESTful	API architecture}
-A RESTful API is based on representational state transfer (REST) technology, an architectural style and approach to communications often used in web services development.
-A RESTful API breaks down a transaction to create a series of small modules. Each module addresses a particular underlying part of the transaction. This modularity provides developers with a lot of flexibility. Every specific module of the REST API can be invoked remotely by an URI which uniquely identifies that service. Once an API has been casted, a certain function is executed on the RESTful API server: the result of this computation is then sent back to the invoking client by a callback function that it offers.
+A RESTful API is based on representational state transfer (REST) technology, an architectural style and approach to communications often used in web services development. A RESTful API breaks down a transaction to create a series of small modules. Each module addresses a particular underlying part of the transaction. This modularity provides developers with a lot of flexibility. Every specific module of the REST API can be invoked remotely by an URI which uniquely identifies that service. Once an API has been casted, a certain function is executed on the RESTful API server: the result of this computation is then sent back to the invoking client by a callback function that it offers.
 As far as the SafeStreets system is concerned, both the web and the mobile application make use of RESTful APIs offered by the application backend system: 
 \begin{itemize}
     \item the mobile application directly interacts with the APIs through their URIs;
-    \item the web application retrieves data and performs operations that require the application backend system through API invokation through a \textbf{Promise-Deferred} asynchronous calling system.
+    \item the web application retrieves data and performs operations that require the application backend system through API invocation through a \textbf{Promise-Deferred} asynchronous calling system.
 \end{itemize}
 Also, the mobile application make use of the Google Maps API for the mapping service.\newline
 At the same time, the application backend system make use of the RESTful APIs offered by the Municipality information system and the Plate recognition service.
@@ -37,9 +36,7 @@ Three-tier architecture is a client-server software architecture pattern in whic
 \begin{itemize}
     \item \textbf{Presentation tier}: 
     \textit{"This is the topmost level of the application. The presentation tier displays information. It communicates with other tiers by which it puts out the results to the browser/client tier and all other tiers in the network. In simple terms, it is a layer which users can access directly (such as a web page, or a mobile application)."}
-    \item \textbf{Application tier}: \textit{
-    "The logical tier is pulled out from the presentation tier and, as its own layer, it controls an application’s functionality by performing detailed processing."}
-    \item \textbf{Data tier}: \textit{
-        "The data tier includes the data persistence mechanisms (database servers, file shares, etc.) and the data access layer that encapsulates the persistence mechanisms and exposes the data. The data access layer should provide an API to the application tier that exposes methods of managing the stored data without exposing or creating dependencies on the data storage mechanisms. Avoiding dependencies on the storage mechanisms allows for updates or changes without the application tier clients being affected by or even aware of the change. As with the separation of any tier, there are costs for implementation and often costs to performance in exchange for improved scalability and maintainability."}
+    \item \textbf{Application tier}: \textit{"The logical tier is pulled out from the presentation tier and, as its own layer, it controls an application’s functionality by performing detailed processing."}
+    \item \textbf{Data tier}: \textit{"The data tier includes the data persistence mechanisms\\ (database servers, file shares, etc.) and the data access layer that encapsulates the persistence mechanisms and exposes the data. The data access layer should provide an API to the application tier that exposes methods of managing the stored data without exposing or creating dependencies on the data storage mechanisms. Avoiding dependencies on the storage mechanisms allows for updates or changes without the application tier clients being affected by or even aware of the change. As with the separation of any tier, there are costs for implementation and often costs to performance in exchange for improved scalability and maintainability."}
 \end{itemize}
-Although the three-tier architecture may seem very similar to the MVC design pattern, they present a crucial difference: in the three-tier architecture the client tier is forbidden to communicate with the data tier (as it is implemented in the SafeStreets system) while the communication in the MVC pattern is triangular. As far as the SafeStreets sytem is concerned, only the application tier is responsible for the interactions between different layers.
+Although the three-tier architecture may seem very similar to the MVC design pattern, they present a crucial difference: in the three-tier architecture the client tier is forbidden to communicate with the data tier (as it is implemented in the SafeStreets system) while the communication in the MVC pattern is triangular. As far as the SafeStreets system is concerned, only the application tier is responsible for the interactions between different layers.
