--- a/DD/Sections/3-User_interface_design/User_interface_design.tex
+++ b/DD/Sections/3-User_interface_design/User_interface_design.tex
@@ -1,4 +1,4 @@
-Since the mockups of the mobile application and the web application were already added in the RASD document, here they are presented two flowchart-like diagrams that represent the user navigation flow in both applications. It is implicit that if the users click the back button the apps return to the previous page, as it happens in all common applications.
+Since the mockups of the mobile and the web applications were already added in the RASD document, here they are presented two flowchart-like diagrams that represent the user navigation flow in both applications. It is implicit that if the users click the back button the apps return to the previous page, as it happens in all common applications.
 
 \vfill
 
