--- a/DD/Sections/4-Requirements_traceability/Requirements_traceability.tex
+++ b/DD/Sections/4-Requirements_traceability/Requirements_traceability.tex
@@ -18,7 +18,7 @@ In this chapter we exhibit the mapping between the requirements stated in the RA
     \end{itemize}  
     \item {[R7]}: Once the car plate number has been retrieved the system must save the report information in the database;
     \begin{itemize}
-      \item \textbf{QueryManager}: under the request submitted by the NewReportHandler, the QueryManager will save the plate number, along with the other information, in the database. 
+      \item \textbf{QueryManager}: under the request submitted by the \\ NewReportHandler, the QueryManager will save the plate number, along with the other information, in the database. 
     \end{itemize} 
     \item {[R8]}: The backend system must retrieve the latest reports submitted by the user from the database. Once the data is gathered, the backend system must send it to the mobile application that will display them; 
     \item[] {[R9]}: The user must be able to consult the status associated with each report;
