--- a/DD/Sections/5-Implementation_integration_and_test/Component_integration.tex
+++ b/DD/Sections/5-Implementation_integration_and_test/Component_integration.tex
@@ -1,4 +1,4 @@
-The backend component integration should procede as described in the chapter 5.0.1, therefore it is unnecessary to repeat it in this section.
+The backend component integration should proceed as described in the chapter 5.0.1, therefore it is unnecessary to repeat it in this section.
 Despite this, the component integration between the frontend, the backend and all the other external service requires a deeper explanation by the following diagrams.
 \section{Frontend-Backend application}
 Firstly, the AuthorityWebApp requires a server on which it is to be hosted. Therefore, it will be deployed on the AuthorityWebServer component.
