--- a/DD/Sections/5-Implementation_integration_and_test/Verification_and_validation.tex
+++ b/DD/Sections/5-Implementation_integration_and_test/Verification_and_validation.tex
@@ -1,3 +1,3 @@
-The validation and verification phases should be actuated throughout the development process since its earlist phases: the later a certain bug/bad behaviour is detected, the higher the cost for solving it. Thus, each function should come together with its own unit test.\newline
-Another set of test should be implemented when multiple functions are bound together to perform (part of) the functionality they address: this process allow the immediate detection of integration bugs which can result to be hard to detect when multiple functions are ensambled together (it could be very hard to detect in which exact point of the computation the bug is generated).
+The validation and verification phases should be actuated throughout the development process since its earliest phases: the later a certain bug/bad behaviour is detected, the higher the cost for solving it. Thus, each function should come together with its own unit test.\newline
+Another set of test should be implemented when multiple functions are bound together to perform (part of) the functionality they address: this process allow the immediate detection of integration bugs which can result to be hard to detect when multiple functions are ensembled together (it could be very hard to detect in which exact point of the computation the bug is generated).
 Once the first version of the SafeStreets system has been implemented and tested, some regression tests have to be developed in order to check the functioning of the system in the future releases.
