--- a/DD/Sections/6-Effort_spent/Nicolo_albergoni.tex
+++ b/DD/Sections/6-Effort_spent/Nicolo_albergoni.tex
@@ -31,6 +31,8 @@
       02/12/2019 & 2.5 & Requirements traceability, Revision ch 2 and 3\\									
       \hline
       03/12/2019 & 1.5 & Requirements traceability \\						
+      \hline
+      08/12/2019 & 1.5 & Final revision \\						
       \hline        							
   \end{tabularx}
 \end{table}
