--- a/DD/Sections/7-References/References.tex
+++ b/DD/Sections/7-References/References.tex
@@ -4,6 +4,6 @@
     \item StarUML for UML diagrams:\newline\href{http://staruml.io/}{http://staruml.io/}
     \item DrawIO for some UML diagrams\newline\href{http://draw.io}{http://draw.io}
     \item MVC design pattern wikipedia: \newline\href{https://en.wikipedia.org/wiki/Model-view-controller}{https://en.wikipedia.org/wiki/Model-view-controller}
-    \item Multitier architecture wikipedia: \newline\href{https://en.wikipedia.org/wiki/Multitier_architecture}{wikipedia}
+    \item Multitier architecture wikipedia: \newline\href{https://en.wikipedia.org/wiki/Multitier_architecture}{https://en.wikipedia.org/wiki/Multitier\_architecture}
     \item Relational database advantages: \newline\href{https://searchdatamanagement.techtarget.com/definition/relational-database}{https://searchdatamanagement.techtarget.com/definition/relational-database}
 \end{itemize}
