--- a/DD/Sections/1-Introduction/Scope.tex
+++ b/DD/Sections/1-Introduction/Scope.tex
@@ -1,5 +1,5 @@
 % TODO: check the scope
-Here is a brief review of what has already been said into the RASD document about the SafeStreet scope and functionalities.
+Here is a brief review of what has already been said into the RASD document about the SafeStreets scope and functionalities.
 \newline
 SafeStreets is a new service that aims, through the help of citizens, to improve the safety of the streets. Users will have the possibility to send reports of illegal behaviour related to street parking to authorities, just by opening the SafeStreets mobile application and take a picture of the violation. Moreover, they can also consult the history of their reports and a map that will highlight the most dangerous streets nearby. SafeStreets also offers a way for the authorities to manage the reports and perform analysis on data. A Web interface will be developed in order to address this purpose. In order to guarantee an efficient use of the application by authorities, the system interacts with an external plate recognition service that will extract the car plate number from the report image. In this way, when authorities need to check on a report they immediately find the car plate number of the vehicle that committed the violation. SafeStreets also implements a functionality that performs the interaction with a municipality service that offers data regarding car accidents, if the particular municipality offers one. SafeStreets can cross this information with its owns, in order to get a better idea of the potentially unsafe areas and therefore suggest some possible interventions.
 As for the performances, the service will have to be scalable,
