--- a/DD/Sections/2-Architectural_Design/Overview.tex
+++ b/DD/Sections/2-Architectural_Design/Overview.tex
@@ -13,9 +13,9 @@ The logical separation (MVC) allows the system to preserve the safety of sensibl
 \end{figure}
 Analyzing the figure \ref{fig:overview_diagram} in details, it is possible to see how the layers are organized:
 \begin{itemize}
-    \item \textbf{Presentation layer}: the mobile application is run on the user mobile devices and distributed through the Android and IOS official stores. Moreover, the authority web application is accessible through any web browser at a specific URL.
-    \item \textbf{Application layer}: a cluster of dedicated servers contains some replicated istances of the backend system that run accordingly to preserve a continuous functioning of the system. The application layer servers also have a local cache necessary for the computation of the ordinary system functionalities. Also, another cluster of servers contain the web server application on which the authority web app runs; 
-    \item \textbf{Data layer}: data is stored on a cloud DBMS that guarantees a constant and consistent functioning. This allows to reduce the cost of maintainance of the system, as by paying a yearly subscription is much cheaper than running a cluster of server (cost of electricity and cooling systems) and performing periodic maintainance.
+    \item \textbf{Presentation layer}: the mobile application is run on the user mobile devices and distributed through the Android and IOS official stores. Moreover, the authority web application is accessible through any web browser at a specific URL;
+    \item \textbf{Application layer}: a cluster of dedicated servers contains some replicated instances of the backend system that run accordingly to preserve a continuous functioning of the system. The application layer servers also have a local cache necessary for the computation of the ordinary system functionalities. Also, another cluster of servers contain the web server application on which the authority web app runs; 
+    \item \textbf{Data layer}: data is stored on a cloud DBMS that guarantees a constant and consistent functioning. This allows to reduce the cost of maintenance of the system, as by paying a yearly subscription is much cheaper than running a cluster of server (cost of electricity and cooling systems) and performing periodic maintenance.
 \end{itemize} 
 %TODO: Inserisci grafico network
 \begin{figure}[H]
@@ -24,9 +24,9 @@ Analyzing the figure \ref{fig:overview_diagram} in details, it is possible to se
     \caption{Network architecture}
     \label{fig:network_diagram}
 \end{figure}
-The network architecture of the Safestreets system is described in the figure \ref{fig:network_diagram}. 
+The network architecture of the SafeStreets system is described in the figure \ref{fig:network_diagram}. 
 \begin{itemize}
-    \item The presentation layer is phisically separated from the rest of the system by the LAN routers of users and authorities;
+    \item The presentation layer is physically separated from the rest of the system by the LAN routers of users and authorities;
     \item The application layer is splitted in two main areas: 
         \begin{itemize}
             \item A DMZ (DeMilitarized Zone), in which a proxy server filters the requests coming from the internet and forwards them to the web server load balancer and to the private backend network;
@@ -40,7 +40,7 @@ the backend application is distributed on several nodes distributed on the same 
 \newline As it is possible to evince in the figure \ref{fig:network_diagram}, the web servers, backend and data nodes are replicated independently and separately.
 The division is necessary in order to isolate and preserve the system core functions. This practice is made for:
 \begin{itemize}
-    \item \textit{Safety purposes}: having phisically separated nodes prevent the possibility to reach certain hidden layer (for example the data layer) of the system, which needs to be absolutely safe as they contain sensible data.
-    \item \textit{Maintainance purposes}: when maintainance is performed over a certain part of the system, this separation allows to preserve that part of the system which does not require maintainance;
+    \item \textit{Safety purposes}: having physically separated nodes prevent the possibility to reach certain hidden layer (for example the data layer) of the system, which needs to be absolutely safe as they contain sensible data;
+    \item \textit{Maintenance purposes}: when maintenance is performed over a certain part of the system, this separation allows to preserve that part of the system which does not require maintenance;
     \item \textit{Node migration}: if the system will require to be partially moved from a cluster to another in the future, this division allows to transfer only a specific part of the network without the need of transferring the whole system.
 \end{itemize}
