--- a/DD/config.tex
+++ b/DD/config.tex
@@ -24,7 +24,7 @@
 \usepackage{titlesec}
 \titleformat{\chapter}{}{}{0em}{\bf\LARGE}
 
-\usepackage{hyperref}
+\usepackage[breaklinks]{hyperref}
 \hypersetup{
     colorlinks,
     citecolor=black,
