final review DD

--- a/DD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
+++ b/DD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
@@ -11,14 +11,14 @@
   \item HTTP: Hyper Text Transfer Protocol;
   \item GPS: Global Positioning System;
   \item GDPR: General Data Protection Regulation;
-  \item REST: Representational State Transfer.
-  \item URL: Uniform resource locator
-  \item URI: Uniform resource indicator
-  \item DB: Database
-  \item DBMS: Database management system
-  \item RDBMS: Relational database management system
-  \item SQL: Structured query language
-  \item NoSQL: Not only SQL
+  \item REST: Representational State Transfer;
+  \item URL: Uniform resource locator;
+  \item URI: Uniform resource indicator;
+  \item DB: Database;
+  \item DBMS: Database management system;
+  \item RDBMS: Relational database management system;
+  \item SQL: Structured query language;
+  \item NoSQL: Not only SQL.
 \end{itemize}
 
 \subsection{Abbreviations}
