--- a/DD/Sections/2-Architectural_Design/Component_interfaces.tex
+++ b/DD/Sections/2-Architectural_Design/Component_interfaces.tex
@@ -9,7 +9,7 @@ The functions represented in the interface diagram have the following properties
 \begin{itemize}
     \item The signature of this functions are built only for conceptual showing purposes and they might differ in the final implementation;
     \item The main part of this diagram's functions have been pictured for guaranteeing a correct correspondency with the sequence diagrams of the previous paragraph, therefore some functions are submitted to the overloading technique;
-    \item They are offered by the application backend component to one another or to other SafeStreets system components (mobile application and web application).
+    \item The interfaces are offered by the application backend component to one another or to other SafeStreets system components (mobile application and web application).
 \end{itemize} 
 In order to better understand how the interfaces work and how they are correlated, the following list of clarifications (assumptions) have been considered:
 \begin{itemize}
