--- a/DD/Sections/2-Architectural_Design/Overview.tex
+++ b/DD/Sections/2-Architectural_Design/Overview.tex
@@ -1,6 +1,6 @@
 SafeStreets is a distributed multilayer software application. The software architecture is a thin three-tiers architecture, based on the MVC design pattern:
 \begin{itemize}
-    \item \textit{Presentation layer (View)}: the presentation layer is conceived as an high level representation of the application, which will be responsible for the user and third party interaction and data visualization. Also, the presentation layer is the only gateway from which actors can interact with the system;
+    \item \textit{Presentation layer (View)}: the presentation layer is conceived as an high level representation of the applications, which will be responsible for the user and third party interaction and data visualization. Also, the presentation layer is the only gateway from which actors can interact with the system;
     \item \textit{Application layer (Controller)}: the application layer is responsible for the core functionalities of the system: inside the controller, the main functions and the business logic is embedded and performed whenever an actor requires their execution;
     \item \textit{Data layer (Model)}: the data layer is responsible for the interaction between the system and the data storage. It manages every operation performed by the system that requires data retrieving and storaging.
 \end{itemize}
