--- a/DD/Sections/6-Effort_spent/Luca_loria.tex
+++ b/DD/Sections/6-Effort_spent/Luca_loria.tex
@@ -6,37 +6,29 @@
         \hline
         Day & Hours & Topic \\
         \hline
-        20/10/2019 & 1.5 & Text assumptions \\								
+        17/11/2019 & 1 & Create DD branch and structure \\								
         \hline
-        22/10/2019 & 1	& Domain assumptions \\
+        19/11/2019 & 2	& Discussion on the components of the system \\
         \hline
-        23/10/2019 & 2	& Design constraints \\
+        20-21/11/2019 & 5	& Create component diagram. Difficulty in finding the right tool \\
         \hline								
-        24/10/2019 & 2	& Revision ch 1 and 2 \\									
+        22/11/2019 & 2	& Write the overview of ch 2 and adding the component diagram+description \\									
         \hline
-        26/10/2019 & 3 & Software system attributes \\									
+        23/11/2019 & 3 & Write detailed component diagram explanation+overview diagrams \\									
         \hline
-        28/10/2019 & 0.5 & Performance requirements \\									
+        24/11/2019 & 1.5 & Revision of ch 1 and till 2.3 \\									
         \hline
-        29/10/2019 & 2	& External interface req \\									
+        27/11/2019 & 3	& Ch 2.6,2.7 and class diagram 2.5 \\									
         \hline
-        30/10/2019 & 5 & Mockups creation \\									
+        28/11/2019 & 2 & Interface diagram \\									
         \hline
-        31/10/2019 & 1.5 & Revision ch 3 \\									
+        30/11/2019 & 3 & Finish interface diagram, write its description. Modify Class diagram and its description. Add Cloud DB description and relational DB \\									
         \hline
-        01/11/2019 & 1 & Alloy signatures \\									
+        02-03/12/2019 & 4 & Chapter 5 \\									
         \hline
-        04/11/2019 & 1.5 & Alloy facts part 1 \\									
+        04/12/2019 & 1 & Chapter 5 diagrams \\									
         \hline
-        06/11/2019 & 3 & Alloy facts part 2 and world predicates \\						
-        \hline
-        07/11/2019 & 4 & Finish alloy, fix class diagram and start impaginating \\		
-        \hline
-        08/11/2019 & 3.5 & Reviewing requirements and sequence diagrams. Create references and Revision. Create alloy world section in RASD. Start impaginating correctly	\\
-        \hline
-        09/11/2019 & 2 & Shared phenomena matrix, frontpage and pagination fixes \\
-        \hline	
-        10/11/2019 & 2 & Final Revision \\
-        \hline							
+        08/12/2019 & 2 & Final review \\						
+        \hline						
     \end{tabularx}
   \end{table}
