--- a/DD/Sections/2-Architectural_Design/Component_view.tex
+++ b/DD/Sections/2-Architectural_Design/Component_view.tex
@@ -1,5 +1,5 @@
 The figure \ref{fig:component_diagram} represents the SafeStreets component diagram. Each of the components are wrapped inside a specific box that indicates the subsystem in which they belong to.
-Subsystems are groups of components which perform similar operations: this boxing technique is a multilayer logical division that can be useful in order to categorize the components and the whole system at different layers of abstraction.
+Subsystems are groups of components which perform similar operations: this boxing technique is a multilayer logical division that can be useful in order to categorize the components and the whole system at different levels of abstraction.
 \newline For the sake of simplicity, the component diagram pictures the application layer (backend) of the system and not the mobile and web app structures. The business logic and core functions are fully contained in the application layer and therefore only that relevant part of the SafeStreets system has been characterized.
 \begin{figure}[H]
     \centering
@@ -11,16 +11,16 @@ From the figure \ref{fig:component_diagram} it is possible to identify several s
 \begin{itemize}
     \item \textbf{API Gateway}: this subsystem is responsible for handling all the request coming from the frontend applications (web and mobile) and routing them into the appropriate components;
     \item \textbf{ReportService}: this subsystem is responsible for handling all the operations related to the violation reports. It interacts directly with the image recognition service in order to retrieve the license plate transcriptions;
-    \item \textbf{PersonnelService}: this subsystem is responsible for handling all the operations related to the personnel management, such as registering new technicians and scheduling them to reports. This subsystem is accessible only by LSA accounts;
+    \item \textbf{PersonnelService}: this subsystem is responsible for handling all the operations related to the personnel management, such as registering new technicians and scheduling them to reports. This subsystem is accessible only by LSA and technicians accounts;
     \item \textbf{AuthenticationService}: this subsystem is responsible for handling the login and registration operations;
     \item \textbf{SuggestedInterventionService}: this subsystem is responsible for handling the operation related to the request of suggested interventions. It interacts directly with the municipality system in order to retrieve car accident information;
-    \item \textbf{DataQueryService}: this subsystem is responsible for handling all the operations that requires a database interaction. It is responsible for interacting with the Cloud DBMS in order to retrieve all the information required by the application backend;
+    \item \textbf{DataQueryService}: this subsystem is responsible for handling all the operations that requires a database interaction. It is responsible for interacting with the Cloud DBMS in order to perform all the operations required by the application backend;
     \item \textbf{NotificationService}: this subsystem is responsible for forwarding results of the computation to the frontend applications (web and mobile).
 \end{itemize} 
 Here it is a detailed explanation for each of the components shown in the component diagram:
 \begin{itemize}%TODO accounts category verification
     \item \textbf{AuthorityWebApp}: this component represents the web application that LSAs and technicians are supposed to use in order to perform any operation with the SafeStreets system. In particular, the web app is the end-user application, therefore it is only a frontend interface;
-    \item \textbf{AuthorityWebServer}: this component represents the web server that hosts the web application used by LSAs and technicians. The web server receives all the HTTP requests from the AuthorityWebApp and forwards them to the application backend system. Moreover, the web server notifies the web application when the responses of the previous requests are forwarded from the Notification Service;
+    \item \textbf{AuthorityWebServer}: this component represents the web server that hosts the web application used by LSAs and technicians. The web server receives all the HTTP requests from the AuthorityWebApp and forwards the requested APIs to the application backend system. Moreover, the web server notifies the web application when the responses of the previous requests are forwarded from the Notification Service;
     \item \textbf{UserMobileApp}: this component represents the mobile application which users interacts with. When users need to perform a specific function offered by the system, the mobile application automatically forwards it to the application backend system. Moreover, the application is always listening for push notifications coming from the Notification service, for example in case one of the previously reported violation is updated by the technicians;
     \item \textbf{URIManager}: this component is responsible for forwarding the requests coming from the frontend system to the backend subsystem which is able to handle the specific request. This routing is possible thanks to the target URI of the frontend request, that uniquely identify the associated component of the application backend system. Before forwarding the requests to the specific components, the URIManager checks the token that is sent by the frontend application in order to retrieve (and then forward) the account category that performed the request. If the token has expired or it does not exist, the request is automatically rejected and the frontend application is requested for a login operation;
     \item \textbf{NewReportHandler}:this component handles the newly reported violation that are forwarded from the URIManager. The NewReportHandler is responsible for checking the correctness of the new reported data and to delegate the plate recognition to the PlateRecognitionService which is external with respect to the SafeStreets system. Once the report has been verified and the plate transcription has been gathered, the report is forwarded to the QueryManager;
@@ -34,7 +34,7 @@ Here it is a detailed explanation for each of the components shown in the compon
     \item \textbf{SuggestionGenerationManager}: this component is responsible for generating suggested interventions when an LSA requests it. The URIManager forwards the generic request of suggestion generation and the system automatically performs the following sequence of actions: 
     \begin{itemize}
         \item If not cached, formulate a query on the LSA competence area, asking for the most frequent categories of violations occured in that set of streets;
-        \item Save on a local cache the information;
+        \item Save the information on a local cache ;
         \item Formulate a data request of car accident to the MunicipalityDataHandler and retrieve the response;
         \item Aggregate the two kind of data and compute suggested interventions;
         \item Forward the suggested interventions to the SuggestionNotifier.
@@ -48,7 +48,7 @@ Here it is a detailed explanation for each of the components shown in the compon
         \begin{itemize}
             \item Insert: tries to insert the specified data into the database;
             \item Select: retrieve the filtered data;
-            \item Update: change the status of the specified report (i.e. from Pending to Solved);
+            \item Update: change the status of the specified report (e.g. from Pending to Solved);
             \item Login: retrieve the specified data and checks whether the result contains at least one correspondency. If this check is approved, the QueryManager generates a token that is associated with the username and the category of the account. This token is then backpropagated to the LoginManager and embedded in the result of the query;
         \end{itemize}
         \item Forwards the result of the query to the AggregationManager.
